<resources>
    <string name="app_name">Robot_SP26</string>
    <string name="begin_game_text">Begin the Game</string>

    <string name="red_message_text">Red Robot\'s Turn</string>
    <string name="white_message_text">White Robot\'s Turn</string>
    <string name="yellow_message_text">Yellow Robot\'s Turn</string>

    <string name="clockwise_button">Clockwise Button</string>
    <string name="counter_button">Counter Button</string>

    <string name="white_robot">White Robot</string>
    <string name="red_robot">Red Robot</string>
    <string name="yellow_robot">Yellow Robot</string>

    <string name="reward_a">Reward A</string>
    <string name="reward_b">Reward B</string>
    <string name="reward_c">Reward C</string>

    <string name="energy_bolt">Energy Bolt</string>
    <string name="energy_score">2</string>

    <string name="reward_a_cost">1</string>
    <string name="reward_b_cost">2</string>
    <string name="reward_c_cost">3</string>

    <string name="purchased">Purchased</string>
    <string name="insufficient">Insufficient Resources</string>
    <string name="purchase_reward">Purchase Reward</string>

    <string name="robot_health">❤️ 10</string>
    <string name="robot_energy">⚡️ 0</string>

    <string name="tokyo">TOKYO</string>
    <string name="tokyo_occupant">Unoccupied</string>
</resources>